--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -33,3 +33,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%color{%p}] %t %c: %m%n
 
 # Application-specific logging
 log4j.logger.com.jcabi.ssh=DEBUG
+log4j.logger.com.jcabi.log.VerboseProcess=INFO
