--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <version>1.14</version>
     </parent>
     <artifactId>jcabi-ssh</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>jcabi-ssh</name>
     <description>Hamcrest Matchers</description>
