--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,20 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jcabi</groupId>
         <artifactId>jcabi</artifactId>
-        <version>1.14</version>
+        <version>1.15</version>
     </parent>
     <artifactId>jcabi-ssh</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jcabi-ssh</name>
-    <description>Hamcrest Matchers</description>
+    <description>Simple SSH Client</description>
     <issueManagement>
         <system>github</system>
         <url>https://github.com/jcabi/jcabi-ssh/issues</url>
