--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <version>1.16</version>
     </parent>
     <artifactId>jcabi-ssh</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
     <name>jcabi-ssh</name>
     <description>Simple SSH Client</description>
