--- a/.rultor.yml
+++ b/.rultor.yml
@@ -19,8 +19,7 @@ deploy:
     mvn clean
     pdd --source=$(pwd) --verbose --file=jcabi-ssh.xml
     s3cmd --no-progress put jcabi-ssh.xml --config=../s3cfg s3://pdd.teamed.io/jcabi-ssh.xml
-  commanders:
-  - yegor256
+  commanders: []
 env:
   MAVEN_OPTS: -XX:MaxPermSize=256m -Xmx1g
 release:
