--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,25 @@ sudo: false
 cache:
   directories:
     - $HOME/.m2
+script:
+  - set -e
+  - mvn clean install -Pqulice --errors --batch-mode
+  - mvn clean
+  - pdd --source=$(pwd) --file=/dev/null
+  - est --dir=est --file=/dev/null
+addons:
+  apt:
+    packages:
+    - libmagic1
+    - libmagic-dev
+install:
+  - gem install pdd
+  - gem install est
 env:
   global:
-    - MAVEN_OPTS="-XX:MaxPermSize=2g -Xmx4g"
-    - JAVA_OPTS="-XX:MaxPermSize=2g -Xmx4g"
+    - MAVEN_OPTS="-Xmx256m"
+    - JAVA_OPTS="-Xmx256m"
 jdk:
+  - oraclejdk8
   - oraclejdk7
-  - openjdk6
   - openjdk7
-script:
-  - mvn clean install -Pqulice --batch-mode --errors
