--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <version>1.24</version>
   </parent>
   <artifactId>jcabi-ssh</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.6.1</version>
   <packaging>jar</packaging>
   <name>jcabi-ssh</name>
   <description>Simple SSH Client</description>
