--- a/.rultor.yml
+++ b/.rultor.yml
@@ -7,10 +7,10 @@ install:
   - sudo gem install pdd
   - sudo gem install xcop
 assets:
-  secring.gpg: zerocracy/home#assets/secring.gpg
-  settings.xml: zerocracy/home#assets/jcabi/settings.xml
-  pubring.gpg: zerocracy/home#assets/pubring.gpg
-  s3cfg: zerocracy/home#assets/s3cfg
+  secring.gpg: yegor256/home#assets/secring.gpg
+  settings.xml: yegor256/home#assets/jcabi/settings.xml
+  pubring.gpg: yegor256/home#assets/pubring.gpg
+  s3cfg: yegor256/home#assets/s3cfg
 merge:
   script: |-
     mvn clean install -Pqulice --errors --settings ../settings.xml
