--- a/.rultor.yml
+++ b/.rultor.yml
@@ -4,8 +4,8 @@ architect:
 - yegor256
 - dmarkov
 install:
-  - sudo gem install pdd
-  - sudo gem install xcop
+  - sudo gem install pdd -v 0.20.5
+  - sudo gem install xcop -v 0.6
 assets:
   secring.gpg: yegor256/home#assets/secring.gpg
   settings.xml: yegor256/home#assets/jcabi/settings.xml
