--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,8 +1,5 @@
 docker:
-  image: yegor256/java8
-architect:
-- yegor256
-- dmarkov
+  image: yegor256/rultor-image:1.9.1
 install:
   - sudo gem install pdd -v 0.20.5
   - sudo gem install xcop -v 0.6
@@ -10,35 +7,13 @@ assets:
   secring.gpg: yegor256/home#assets/secring.gpg
   settings.xml: yegor256/home#assets/jcabi/settings.xml
   pubring.gpg: yegor256/home#assets/pubring.gpg
-  s3cfg: yegor256/home#assets/s3cfg
 merge:
   script: |-
-    mvn clean install -Pqulice --errors --settings ../settings.xml
-    mvn clean
     pdd --source=$(pwd) --verbose --file=/dev/null
-  commanders:
-  - carlosmiranda
-  - darkled
-  - dmzaytsev
-  - ggajos
-  - hdouss
-  - krzyk
-  - longtimeago
-  - mkordas
-  - pinaf
-deploy:
-  script: |-
-    mvn clean deploy -Pqulice --errors --settings ../settings.xml
-    mvn clean
-    pdd --source=$(pwd) --verbose --file=jcabi-ssh.xml
-    s3cmd --no-progress put jcabi-ssh.xml --config=../s3cfg s3://pdd.teamed.io/jcabi-ssh.xml
-env:
-  MAVEN_OPTS: -XX:MaxPermSize=256m -Xmx1g
+    mvn clean install -Pqulice --errors --settings ../settings.xml
 release:
   script: |-
     mvn versions:set "-DnewVersion=${tag}"
     git commit -am "${tag}"
     mvn clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml
     mvn clean site-deploy -Psite --errors --settings ../settings.xml
-  commanders:
-  - yegor256
