--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <dependency>
       <groupId>org.cactoos</groupId>
       <artifactId>cactoos</artifactId>
-      <version>0.16</version>
+      <version>0.50</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -89,12 +89,18 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
     <dependency>
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
-      <version>0.1.54</version>
+      <version>0.1.55</version>
     </dependency>
     <dependency>
       <groupId>org.apache.sshd</groupId>
       <artifactId>sshd-core</artifactId>
-      <version>1.6.0</version>
+      <version>2.8.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sshd</groupId>
+      <artifactId>sshd-common</artifactId>
+      <version>2.8.0</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
@@ -124,6 +130,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
             <configuration>
               <excludes combine.children="append">
                 <exclude>findbugs:.*</exclude>
+                <exclude>duplicatefinder:.*</exclude>
               </excludes>
             </configuration>
           </plugin>
