--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
   <parent>
     <groupId>com.jcabi</groupId>
     <artifactId>jcabi</artifactId>
-    <version>1.31.0</version>
+    <version>1.33.0</version>
   </parent>
   <artifactId>jcabi-ssh</artifactId>
   <version>2.0-SNAPSHOT</version>
@@ -107,6 +107,18 @@ OF THE POSSIBILITY OF SUCH DAMAGE.
       <artifactId>sshd-common</artifactId>
       <version>2.9.0</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>2.0.0-alpha5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
