--- a/.rultor.yml
+++ b/.rultor.yml
@@ -17,5 +17,5 @@ release:
   script: |-
     mvn versions:set "-DnewVersion=${tag}"
     git commit -am "${tag}"
-    mvn clean deploy -Pqulice -Psonatype -Pjcabi --errors --settings ../settings.xml
+    mvn clean deploy -Pqulice -Psonatype -Pjcabi-ssh -Pjcabi --errors --settings ../settings.xml
     mvn clean site-deploy -Psite --errors --settings ../settings.xml
