--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2022, macos-12]
+        os: [ubuntu-22.04, windows-latest, macos-12]
         java: [11, 17]
     steps:
       - uses: actions/checkout@v4
