rubocop-rake and others

--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -1,6 +1,6 @@
 # Copyright (c) 2014-2025, jcabi.com
 # All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met: 1) Redistributions of source code must retain the above
@@ -12,7 +12,7 @@
 # the names of its contributors may be used to endorse or promote
 # products derived from this software without specific prior written
 # permission.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 # "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT
 # NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
@@ -40,7 +40,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, windows-latest, macos-15]
+        os: [ubuntu-24.04, windows-2022, macos-15]
         java: [11, 17]
     steps:
       - uses: actions/checkout@v4
