--- a/typos.toml
+++ b/typos.toml
@@ -1,2 +1,4 @@
+# SPDX-FileCopyrightText: Copyright (c) 2025 Yegor Bugayenko
+# SPDX-License-Identifier: MIT
 [default.extend-identifiers]
 ser = "ser"
